data/derived/fa15/progs/unify/prog3060.ml.out
Characters 26-40:
  let rec clone x n = "[" ^ sepConcat "; " ^ (List.append x n) ^ "]";;
                            ^^^^^^^^^^^^^^
Error: This expression has type string list -> string
       but an expression was expected of type string
